Test: test model on another text

--- a/Resume_Role_prediction.ipynb
+++ b/Resume_Role_prediction.ipynb
@@ -716,6 +716,46 @@
       },
       "execution_count": 32,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(\"resume_pipeline.pkl\", \"rb\") as f:\n",
+        "    loaded_pipeline = pickle.load(f)\n",
+        "\n",
+        "def resume_predictor(raw_resume):\n",
+        "    vec = loaded_pipeline.predict([raw_resume])\n",
+        "    return encoder.classes_[vec[0]]\n",
+        "\n",
+        "raw_resume_2 = '''\n",
+        "Responsibilities :\n",
+        "- Develop automation scripts for deployment of applications in a Kubernetes environment\n",
+        "- Build and test ansible scripts for workload configuration\n",
+        "- Develop user guides and other technical documentation\n",
+        "- Conduct knowledge sharing sessions with customers/partners\n",
+        "'''\n",
+        "\n",
+        "# Test\n",
+        "prediction = resume_predictor(raw_resume_2)\n",
+        "print(prediction)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S-g3mVSY7z2i",
+        "outputId": "04f7695d-f328-42e0-d36b-725ad24eea5e"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Automation Testing\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
