Refactor: update file model pipeline

--- a/modelDevelopment/Resume_Role_prediction.ipynb
+++ b/modelDevelopment/Resume_Role_prediction.ipynb
@@ -11,9 +11,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NZgN1ewsx9T1",
-        "outputId": "470bcee4-30a5-40ef-b099-8f44475bff78"
+        "outputId": "304d8366-3e68-4bd2-889f-b84b738dcd5b"
       },
-      "execution_count": 12,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -27,16 +27,17 @@
     {
       "cell_type": "code",
       "source": [
+        "# you can uncomment the below line to install textract if the `import textract` in the below block has issues\n",
         "# pip install textract\n"
       ],
       "metadata": {
+        "id": "qsYF2fzeyoPp",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "qsYF2fzeyoPp",
-        "outputId": "a393dc5e-6414-4357-c0c3-50da310c4341"
+        "outputId": "c0d3a7d0-5804-4215-db19-0b53d6dde54c"
       },
-      "execution_count": 13,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -58,26 +59,24 @@
             "Requirement already satisfied: soupsieve>=1.2 in /usr/local/lib/python3.10/dist-packages (from beautifulsoup4~=4.8.0->textract) (2.5)\n",
             "Requirement already satisfied: imapclient==2.1.0 in /usr/local/lib/python3.10/dist-packages (from extract-msg<=0.29.*->textract) (2.1.0)\n",
             "Requirement already satisfied: olefile>=0.46 in /usr/local/lib/python3.10/dist-packages (from extract-msg<=0.29.*->textract) (0.46)\n",
-            "Requirement already satisfied: tzlocal>=2.1 in /usr/local/lib/python3.10/dist-packages (from extract-msg<=0.29.*->textract) (5.0.1)\n",
+            "Requirement already satisfied: tzlocal>=2.1 in /usr/local/lib/python3.10/dist-packages (from extract-msg<=0.29.*->textract) (5.1)\n",
             "Requirement already satisfied: compressed-rtf>=1.0.6 in /usr/local/lib/python3.10/dist-packages (from extract-msg<=0.29.*->textract) (1.0.6)\n",
             "Requirement already satisfied: ebcdic>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from extract-msg<=0.29.*->textract) (1.1.1)\n",
             "Requirement already satisfied: lxml>=3.1.0 in /usr/local/lib/python3.10/dist-packages (from python-pptx~=0.6.18->textract) (4.9.3)\n",
             "Requirement already satisfied: Pillow<=9.5.0,>=3.3.2 in /usr/local/lib/python3.10/dist-packages (from python-pptx~=0.6.18->textract) (9.4.0)\n",
-            "Requirement already satisfied: XlsxWriter>=0.5.7 in /usr/local/lib/python3.10/dist-packages (from python-pptx~=0.6.18->textract) (3.1.6)\n"
+            "Requirement already satisfied: XlsxWriter>=0.5.7 in /usr/local/lib/python3.10/dist-packages (from python-pptx~=0.6.18->textract) (3.1.7)\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 28,
       "metadata": {
         "id": "7ORvJN5uxLrz"
       },
       "outputs": [],
       "source": [
-        "### Resume Datatset\n",
-        "\n",
         "# Required libraries/ packages\n",
         "import pandas as pd\n",
         "import re\n",
@@ -90,14 +89,112 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Check versions"
+      ],
+      "metadata": {
+        "id": "7Ggqqp1UBv9F"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 15,
+      "source": [
+        "print(pd.__version__)\n",
+        "print(re.__version__)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oONVt3g9ByMw",
+        "outputId": "077e7215-84bd-48d2-9ec0-e4456bd8e1ff"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.5.3\n",
+            "2.2.1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip show scikit-learn"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mrONnOTNCsjD",
+        "outputId": "5d8c5733-2e5d-4022-e108-4c3c0cd8761a"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Name: scikit-learn\n",
+            "Version: 1.2.2\n",
+            "Summary: A set of python modules for machine learning and data mining\n",
+            "Home-page: http://scikit-learn.org\n",
+            "Author: \n",
+            "Author-email: \n",
+            "License: new BSD\n",
+            "Location: /usr/local/lib/python3.10/dist-packages\n",
+            "Requires: joblib, numpy, scipy, threadpoolctl\n",
+            "Required-by: fastai, imbalanced-learn, librosa, mlxtend, qudida, sklearn-pandas, yellowbrick\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip show textract"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pAB1qQcPCeut",
+        "outputId": "5ab34684-5222-4ec8-8239-b1f52b604f18"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Name: textract\n",
+            "Version: 1.6.5\n",
+            "Summary: extract text from any document. no muss. no fuss.\n",
+            "Home-page: https://github.com/deanmalmgren/textract\n",
+            "Author: Dean Malmgren\n",
+            "Author-email: dean.malmgren@datascopeanalytics.com\n",
+            "License: MIT\n",
+            "Location: /usr/local/lib/python3.10/dist-packages\n",
+            "Requires: argcomplete, beautifulsoup4, chardet, docx2txt, extract-msg, pdfminer.six, python-pptx, six, SpeechRecognition, xlrd\n",
+            "Required-by: \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FwmOYyd6xLr0",
-        "outputId": "1c96ec02-3cc0-4306-f3bf-2d4d5d378382"
+        "outputId": "84324521-bb88-4029-e76f-450dae3b4403"
       },
       "outputs": [
         {
@@ -148,13 +245,11 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 29
         }
       ],
       "source": [
-        "# df=pd.read_csv(r\"C:\\Users\\acer\\Downloads\\UpdatedResumeDataSet.csv\\UpdatedResumeDataSet.csv\")\n",
         "df=pd.read_csv(\"/content/drive/MyDrive/nus-sds-train-data-set/UpdatedResumeDataSet.csv\")\n",
-        "\n",
         "# dataset source https://www.kaggle.com/datasets/gauravduttakiit/resume-dataset\n",
         "\n",
         "df.info() # nice, all non null\n",
@@ -164,14 +259,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 91
         },
         "id": "o80yQDugxLr1",
-        "outputId": "90320978-5d2d-44ed-ff8a-57df338402d9"
+        "outputId": "a45ceb81-dd82-43a4-f0b2-d3cd459c4ac3"
       },
       "outputs": [
         {
@@ -185,7 +280,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 8
         }
       ],
       "source": [
@@ -211,7 +306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 8,
       "metadata": {
         "id": "h1qRAEuAxLr2"
       },
@@ -220,13 +315,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "35FyKwbBxLr2",
-        "outputId": "f80fb1b0-7164-477b-93d5-745579121dc4"
+        "outputId": "48b5eca7-ee74-4886-c394-debd02bdc328"
       },
       "outputs": [
         {
@@ -262,7 +357,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 9
         }
       ],
       "source": [
@@ -272,13 +367,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 10,
       "metadata": {
         "id": "Am_e_EdvxLr3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8c747a5d-aae1-4700-b975-438a3903f6cd"
+        "outputId": "14c5944f-d36a-4d3f-88aa-866e620a5225"
       },
       "outputs": [
         {
@@ -313,7 +408,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 10
         }
       ],
       "source": [
@@ -327,13 +422,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 11,
       "metadata": {
         "id": "AchwYMQwxLr3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6f870967-ebde-449f-ed93-0b24d58f3df6"
+        "outputId": "9150ac2b-4003-444c-9594-5ef4edbba14f"
       },
       "outputs": [
         {
@@ -349,7 +444,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 11
         }
       ],
       "source": [
@@ -360,13 +455,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 12,
       "metadata": {
         "id": "r8UULku6xLr4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "62f719c2-99bf-40f6-ad61-2aab6cf1d053"
+        "outputId": "de2912dd-8054-4766-dee2-6f7b31635ac0"
       },
       "outputs": [
         {
@@ -402,7 +497,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 12
         }
       ],
       "source": [
@@ -411,7 +506,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 13,
       "metadata": {
         "id": "3V5feeSRxLr5"
       },
@@ -426,7 +521,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 14,
       "metadata": {
         "id": "43ou4zOzxLr6"
       },
@@ -438,14 +533,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 15,
       "metadata": {
         "id": "vwluLiidxLr6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 448
         },
-        "outputId": "f9f8f501-30d3-4f86-a4d8-3d8c3be49068"
+        "outputId": "9cf75d37-11d7-46a7-da74-4cec8c16530b"
       },
       "outputs": [
         {
@@ -456,7 +551,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 15
         },
         {
           "output_type": "display_data",
@@ -483,13 +578,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 16,
       "metadata": {
         "id": "UTtXnQAKxLr7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4fb166ff-ab1f-4da2-ea27-d5fb21afdf5b"
+        "outputId": "dbed61f6-5fee-4885-dfe3-2ef1dbb076f7"
       },
       "outputs": [
         {
@@ -500,7 +595,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 16
         }
       ],
       "source": [
@@ -512,7 +607,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 17,
       "metadata": {
         "id": "LeKfkMJexLr8"
       },
@@ -524,14 +619,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 18,
       "metadata": {
         "id": "WsB9JU4-xLr8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 75
         },
-        "outputId": "77ee32f7-d4ad-4527-9e49-0d38224d1e37"
+        "outputId": "04b97672-a7de-438a-ce13-d5b55b69d6cc"
       },
       "outputs": [
         {
@@ -545,7 +640,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 18
         }
       ],
       "source": [
@@ -555,7 +650,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 19,
       "metadata": {
         "id": "VZUhXgRixLr8"
       },
@@ -569,13 +664,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 20,
       "metadata": {
         "id": "FGiONS8bxLr8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e1e7d0b3-38bf-44b9-b4af-ff1ca2ad6d8d"
+        "outputId": "02c7d1da-8a24-42b0-cf9a-62d6b70b4573"
       },
       "outputs": [
         {
@@ -623,13 +718,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 21,
       "metadata": {
         "id": "L_60F3TsxLr8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d97a5f2d-d57b-4cca-8e71-d822b0ea9d2d"
+        "outputId": "77edc323-21f4-4c99-82bf-43ee5ed839d2"
       },
       "outputs": [
         {
@@ -668,8 +763,7 @@
         "acquired over the years, I will be able to play a deep role in the position offered.'''\n",
         "\n",
         "def resume_predictor(raw_resume):\n",
-        "    resume_processed = ' '.join(re.findall('[a-zA-Z0-9]+',raw_resume)).lower()\n",
-        "    vec=vector.transform([resume_processed])\n",
+        "    vec=vector.transform([raw_resume])\n",
         "    return encoder.classes_[clf.predict(vec)[0]]\n",
         "\n",
         "print('raw_resume_1 role prediction:',resume_predictor(raw_resume_1))\n",
@@ -682,45 +776,26 @@
       "source": [
         "import re\n",
         "import pickle\n",
-        "from sklearn.base import BaseEstimator, TransformerMixin\n",
+        "from sklearn.preprocessing import FunctionTransformer\n",
         "from sklearn.pipeline import Pipeline\n",
         "\n",
-        "# 1. Create a custom transformer\n",
-        "class ResumeTransformer(BaseEstimator, TransformerMixin):\n",
-        "    def fit(self, X, y=None):\n",
-        "        return self\n",
-        "\n",
-        "    def transform(self, X, y=None):\n",
-        "        # Process each resume in X\n",
-        "        transformed_data = []\n",
-        "        for resume in X:\n",
-        "            processed_resume = ' '.join(re.findall('[a-zA-Z0-9]+', resume)).lower()\n",
-        "            transformed_data.append(processed_resume)\n",
-        "        return transformed_data\n",
-        "\n",
-        "# Assuming you've defined 'vector', 'clf', and 'encoder' earlier in your code\n",
-        "\n",
-        "# 2. Construct the pipeline\n",
         "pipeline = Pipeline([\n",
-        "    ('resume_transformer', ResumeTransformer()),\n",
         "    ('vectorizer', vector),\n",
-        "    ('classifier', clf)\n",
-        "])\n",
+        "    ('classifier', clf)])\n",
         "\n",
-        "# 3. Save the pipeline to a pickle file\n",
-        "with open(\"resume_pipeline.pkl\", \"wb\") as f:\n",
+        "with open(\"resume_pipeline_0.2.whatever\", \"wb\") as f:\n",
         "    pickle.dump(pipeline, f)"
       ],
       "metadata": {
-        "id": "wJoICqoS1pz_"
+        "id": "QCmR1MhZLln_"
       },
-      "execution_count": 32,
+      "execution_count": 25,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "with open(\"resume_pipeline.pkl\", \"rb\") as f:\n",
+        "with open(\"resume_pipeline_0.2.whatever\", \"rb\") as f:\n",
         "    loaded_pipeline = pickle.load(f)\n",
         "\n",
         "def resume_predictor(raw_resume):\n",
@@ -744,9 +819,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S-g3mVSY7z2i",
-        "outputId": "04f7695d-f328-42e0-d36b-725ad24eea5e"
+        "outputId": "6dc75f25-973d-4f2b-b4f4-776673b88cbe"
       },
-      "execution_count": 37,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
